--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       align-items: center;
     }
 
-    .avatar-container img{
+    .avatar-img{
       width: 40px;
       height: 40px;
       border-radius: 20px;
